--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="app-header">
       <div class="app-title">
         <h1>Roo</h1>
-        <p class="muted">Offline-first blanket picker</p>
+        <p class="muted">Blanket picker</p>
       </div>
 
       <nav class="tabs" role="tablist" aria-label="Sections">
